--- a/app/views/calculator/reverse_scrutiny_period.html.erb
+++ b/app/views/calculator/reverse_scrutiny_period.html.erb
@@ -1,7 +1,10 @@
 <%= render :partial => 'nav'%>
 
-<%= render :partial => 'reverse_form'%>
+<div class="reading-width">
 
-<%= render :partial => 'workings/calculations' %>
+	<%= render :partial => 'reverse_form'%>
 
-<%= render :partial => 'disclaimer/disclaimer' %>
+	<%= render :partial => 'workings/calculations' %>
+
+	<%= render :partial => 'disclaimer/disclaimer' %>
+</div>
