--- a/app/views/calculator/scrutiny_reverse.html.erb
+++ b/app/views/calculator/scrutiny_reverse.html.erb
@@ -1,29 +1,32 @@
 <%= render :partial => 'nav' %>
 
-<% if @error_message -%>
-	<%= content_tag( 'p', @error_message ) %>
-<% else -%>
+<div class="reading-width">
 
-	<div class="result-box">
-		<%= content_tag( 'p', "To produce a target end date of #{@start_date.strftime( '%A, %-d %B %Y')}, the scrutiny period is currently expected to begin on #{@scrutiny_end_date.strftime( '%A, %-d %B %Y')} and end on #{@scrutiny_start_date.strftime( '%A, %-d %B %Y')}.".html_safe ) %>
-	<%= content_tag( 'p', "In order for the scrutiny period to start on #{content_tag( 'strong', @scrutiny_end_date.strftime( '%A, %-d %B %Y') )}, #{@action_required} that date.".html_safe ) %>
-	</div>
-	
-	<% if @twenty_one_day_rule_date -%>
-		<div class="box">
-			<%= content_tag( 'p', "
-			According to the convention described by the '#{link_to( '21-day rule', 'https://erskinemay.parliament.uk/section/5628/time-limits' )}', were a made instrument to be laid on #{@scrutiny_end_date.strftime( '%A, %-d %B %Y' )}, it <em>should not come into force earlier than</em> #{content_tag( 'strong', @twenty_one_day_rule_date.strftime( '%A, %-d %B %Y') )}.".html_safe ) %>
+	<% if @error_message -%>
+		<%= content_tag( 'p', @error_message ) %>
+	<% else -%>
+
+		<div class="result-box">
+			<%= content_tag( 'p', "To produce a target end date of #{@start_date.strftime( '%A, %-d %B %Y')}, the scrutiny period is currently expected to begin on #{@scrutiny_end_date.strftime( '%A, %-d %B %Y')} and end on #{@scrutiny_start_date.strftime( '%A, %-d %B %Y')}.".html_safe ) %>
+		<%= content_tag( 'p', "In order for the scrutiny period to start on #{content_tag( 'strong', @scrutiny_end_date.strftime( '%A, %-d %B %Y') )}, #{@action_required} that date.".html_safe ) %>
 		</div>
-	<% end -%>
 	
-	<p>These dates were calculated using this information:</p>
-	<ul>
-		<%= content_tag( 'li', "A procedure type #{content_tag( 'strong', @procedure.name )}".html_safe ) if @procedure %>
-		<%= content_tag( 'li', "A scrutiny period of #{content_tag( 'strong', "#{@day_count} days" )}".html_safe ) %>
-		<%= content_tag( 'li', "A target end date of #{content_tag( 'strong', @start_date.strftime( '%-d %B %Y') )}".html_safe ) %>
-	</ul>
+		<% if @twenty_one_day_rule_date -%>
+			<div class="box">
+				<%= content_tag( 'p', "
+				According to the convention described by the '#{link_to( '21-day rule', 'https://erskinemay.parliament.uk/section/5628/time-limits' )}', were a made instrument to be laid on #{@scrutiny_end_date.strftime( '%A, %-d %B %Y' )}, it <em>should not come into force earlier than</em> #{content_tag( 'strong', @twenty_one_day_rule_date.strftime( '%A, %-d %B %Y') )}.".html_safe ) %>
+			</div>
+		<% end -%>
+	
+		<p>These dates were calculated using this information:</p>
+		<ul>
+			<%= content_tag( 'li', "A procedure type #{content_tag( 'strong', @procedure.name )}".html_safe ) if @procedure %>
+			<%= content_tag( 'li', "A scrutiny period of #{content_tag( 'strong', "#{@day_count} days" )}".html_safe ) %>
+			<%= content_tag( 'li', "A target end date of #{content_tag( 'strong', @start_date.strftime( '%-d %B %Y') )}".html_safe ) %>
+		</ul>
 
-	<%= content_tag( 'p', 'If sitting days change within this period, the dates of the scrutiny period will need to be recalculated.' ) %>
-<% end -%>
+		<%= content_tag( 'p', 'If sitting days change within this period, the dates of the scrutiny period will need to be recalculated.' ) %>
+	<% end -%>
 
-<%= render :partial => 'disclaimer/disclaimer' %>
+	<%= render :partial => 'disclaimer/disclaimer' %>
+</div>
