--- a/app/views/calculator/style.html.erb
+++ b/app/views/calculator/style.html.erb
@@ -1,5 +1,8 @@
-<%= render :partial => 'style_form'%>
+<div class="reading-width">
 
-<%= render :partial => 'workings/calculations' %>
+	<%= render :partial => 'style_form'%>
 
-<%= render :partial => 'disclaimer/disclaimer' %>
+	<%= render :partial => 'workings/calculations' %>
+
+	<%= render :partial => 'disclaimer/disclaimer' %>
+</div>
