--- a/app/views/code_comment/comment_wrapper.html.erb
+++ b/app/views/code_comment/comment_wrapper.html.erb
@@ -1,1 +1,3 @@
-<%= render :partial => "code_comment/comments/#{@include_partial}" %>
+<div class="reading-width">
+	<%= render :partial => "code_comment/comments/#{@include_partial}" %>
+</div>
