--- a/app/views/meta/app.html.erb
+++ b/app/views/meta/app.html.erb
@@ -1,39 +1,42 @@
-<h2>Demonstration MacOS application</h2>
+<div class="reading-width">
 
-<p>This website generates JSON output for the calculation of scrutiny dates. This JSON can be called for and parsed outside a web browser.</p>
+	<h2>Demonstration MacOS application</h2>
 
-<p>Here's <a href='/egg-timer/egg-timer.app.zip'>an example application for MacOS, just called 'Egg Timer'</a>, that calls the JSON endpoint and displays the result.</p>
+	<p>This website generates JSON output for the calculation of scrutiny dates. This JSON can be called for and parsed outside a web browser.</p>
 
-
-<h2>Installation</h2>
-
-<p>This is an 'unsigned' application, written without an Apple developer account. If you'd like to open the application, please follow <a href="https://support.apple.com/en-gb/guide/mac-help/mh40616/mac">the instructions from Apple</a>:</p>
-
-<ol>
-<li>In the Finder  on your Mac, locate the app you want to open.</li>
-<li>Control-click the app icon, then choose Open from the shortcut menu.</li>
-<li>Click Open.</li>
-</ol>
-
-<h2>How to use the application</h2>
-
-<p>The Egg Timer application will calculate a scrutiny date whenever the information used for the calculation is changed.</p>
-
-<p>The 'anticipated scrutiny end date' will be recalculated when you click on a new procedure, when you select a new date in the calendar picker, or when you change the number of days required to count.</p>
-
-<h2>Screenshots</h2>
+	<p>Here's <a href='/egg-timer/egg-timer.app.zip'>an example application for MacOS, just called 'Egg Timer'</a>, that calls the JSON endpoint and displays the result.</p>
 
 
-<p><img src="../egg-timer-app-treaties.jpeg" loading="lazy" style="width:100%;" alt="A screenshot of the Egg Timer Mac app showing a scrutiny date calculation for treaties">
-<br>
-A screenshot of the Egg Timer Mac app showing a scrutiny date calculation for treaties</p>
+	<h2>Installation</h2>
 
-<p><img src="../egg-timer-app-remedial-order.jpeg" loading="lazy" style="width:100%;" alt="A screenshot of the Egg Timer Mac app showing a scrutiny date calculation for remedial orders">
-<br>
-A screenshot of the Egg Timer Mac app showing a scrutiny date calculation for remedial orders</p>
+	<p>This is an 'unsigned' application, written without an Apple developer account. If you'd like to open the application, please follow <a href="https://support.apple.com/en-gb/guide/mac-help/mh40616/mac">the instructions from Apple</a>:</p>
 
-<h2>Binary source</h2>
+	<ol>
+	<li>In the Finder  on your Mac, locate the app you want to open.</li>
+	<li>Control-click the app icon, then choose Open from the shortcut menu.</li>
+	<li>Click Open.</li>
+	</ol>
 
-<p>The application is written in Xojo. The <a href='/egg-timer/Egg Timer.xojo_binary_project.zip'>Xojo binary source</a> is available.</p> 
+	<h2>How to use the application</h2>
 
-<p><em>Please remember that this is only demonstration code - and not intended to be used in production.</em> We cannot guarantee that the application will be kept in sync with the website.</p>
+	<p>The Egg Timer application will calculate a scrutiny date whenever the information used for the calculation is changed.</p>
+
+	<p>The 'anticipated scrutiny end date' will be recalculated when you click on a new procedure, when you select a new date in the calendar picker, or when you change the number of days required to count.</p>
+
+	<h2>Screenshots</h2>
+
+
+	<p><img src="../egg-timer-app-treaties.jpeg" loading="lazy" style="width:100%;" alt="A screenshot of the Egg Timer Mac app showing a scrutiny date calculation for treaties">
+	<br>
+	A screenshot of the Egg Timer Mac app showing a scrutiny date calculation for treaties</p>
+
+	<p><img src="../egg-timer-app-remedial-order.jpeg" loading="lazy" style="width:100%;" alt="A screenshot of the Egg Timer Mac app showing a scrutiny date calculation for remedial orders">
+	<br>
+	A screenshot of the Egg Timer Mac app showing a scrutiny date calculation for remedial orders</p>
+
+	<h2>Binary source</h2>
+
+	<p>The application is written in Xojo. The <a href='/egg-timer/Egg Timer.xojo_binary_project.zip'>Xojo binary source</a> is available.</p> 
+
+	<p><em>Please remember that this is only demonstration code - and not intended to be used in production.</em> We cannot guarantee that the application will be kept in sync with the website.</p>
+</div>
