--- a/app/views/meta/librarian_tools/calendar_sync.html.erb
+++ b/app/views/meta/librarian_tools/calendar_sync.html.erb
@@ -1,53 +1,48 @@
+<div class="reading-width">
 
-
-<section>
-<h2>Creating appointments</h2>
-
-
-	<p>You can create <strong>a single day, full day appointment</strong>: the application will mark a single day.</p>
-	<p>You can create <strong>a timed appointment on a single day</strong>: the application will mark a single day.</p>
-	
-	
-	
-	
-		<p>You can create <strong>a multi-day all day appointment</strong>: the application will mark all included days as a single 'day'. For sitting days, this would allow us to create sittings that span dates. If you want to create individual days, you should create a single day, full day appointment.</p>
-	<p>You can create <strong>a timed, part day appointment across more than one day</strong>: the application will mark all included days as a single 'day'. For sitting days, this would allow us to create sittings that span dates and have times. If you want to create individual days, you should create a single day, full day appointment.</p>
-	
-	
-	<p>When entering sitting days, do not create multi-day appointments unless a sitting day extends over more than one calendar day and wipes out the next day’s scheduled sitting.</p>
-	<p>Creating multi-day appointments for individual sitting days creates a single sitting day spanning those dates. For the purposes of calculating some types of scrutiny period this would be counted as a single parliamentary sitting day and return an incorrect estimated end date.</p>
-	
-	
-	
-	
-	<p>You can create <strong>a multi-day all day appointment</strong>. For adjournment days, these will be split into individual days in the application. For sitting and virtual sitting days, these will not be split - the application will mark all included days as a single 'day'. This allows us to create sittings that span dates. If you want to create individual sitting days, you should create a single day, full day appointment.</p>
-	
-	<p>You can create <strong>a timed, part day appointment across more than one day</strong>. For adjournment days, these will be split into individual days in the application. For sitting and virtual sitting days, these will not be split - the application will mark all included days as a single 'day'. This allows us to create sittings that span dates and have times. If you want to create individual sitting days, you should create a single day, full day appointment.</p>
-	
-	
-	<p>You can create <strong>a set of individual days as a recurring appointment</strong>: the application will mark single days.</p>
-	
-	<p>Days during periods of <strong>prorogation or dissolution should be left blank on the calendar</strong>. The Houses can only be adjourned during a session.</p>
-</section>
-
-<section>
-<h2>Editing appointments</h2>
-	<p>You can edit <strong>the date(s) of an appointment</strong>: this will delete the old days and create the new days in the application.</p>
-	</section>
-	
-	
 	<section>
-<h2>Deleting appointments</h2>	
-<p>You can delete <strong>a single day, full day appointment</strong>: this will delete that day from the application.</p>
-	<p>You can delete <strong>a timed appointment on a single day</strong>: this will delete that day from the application.</p>
-	<p>You can delete <strong>a multi-day all day appointment</strong>: this will delete those days from the application.</p>
-	<p>You can delete <strong>a timed, part day appointment across more than one day</strong>: this will delete those days from the application.</p>
-	<p>You can delete <strong>a single appointment from a set of recurring appointments</strong>: this will delete that day from the application.</p>
-
-</section>
+	<h2>Creating appointments</h2>
 
 
+		<p>You can create <strong>a single day, full day appointment</strong>: the application will mark a single day.</p>
+		<p>You can create <strong>a timed appointment on a single day</strong>: the application will mark a single day.</p>
+	
+	
+	
+	
+			<p>You can create <strong>a multi-day all day appointment</strong>: the application will mark all included days as a single 'day'. For sitting days, this would allow us to create sittings that span dates. If you want to create individual days, you should create a single day, full day appointment.</p>
+		<p>You can create <strong>a timed, part day appointment across more than one day</strong>: the application will mark all included days as a single 'day'. For sitting days, this would allow us to create sittings that span dates and have times. If you want to create individual days, you should create a single day, full day appointment.</p>
+	
+	
+		<p>When entering sitting days, do not create multi-day appointments unless a sitting day extends over more than one calendar day and wipes out the next day’s scheduled sitting.</p>
+		<p>Creating multi-day appointments for individual sitting days creates a single sitting day spanning those dates. For the purposes of calculating some types of scrutiny period this would be counted as a single parliamentary sitting day and return an incorrect estimated end date.</p>
+	
+	
+	
+	
+		<p>You can create <strong>a multi-day all day appointment</strong>. For adjournment days, these will be split into individual days in the application. For sitting and virtual sitting days, these will not be split - the application will mark all included days as a single 'day'. This allows us to create sittings that span dates. If you want to create individual sitting days, you should create a single day, full day appointment.</p>
+	
+		<p>You can create <strong>a timed, part day appointment across more than one day</strong>. For adjournment days, these will be split into individual days in the application. For sitting and virtual sitting days, these will not be split - the application will mark all included days as a single 'day'. This allows us to create sittings that span dates and have times. If you want to create individual sitting days, you should create a single day, full day appointment.</p>
+	
+	
+		<p>You can create <strong>a set of individual days as a recurring appointment</strong>: the application will mark single days.</p>
+	
+		<p>Days during periods of <strong>prorogation or dissolution should be left blank on the calendar</strong>. The Houses can only be adjourned during a session.</p>
+	</section>
 
+	<section>
+	<h2>Editing appointments</h2>
+		<p>You can edit <strong>the date(s) of an appointment</strong>: this will delete the old days and create the new days in the application.</p>
+		</section>
+	
+	
+		<section>
+	<h2>Deleting appointments</h2>	
+	<p>You can delete <strong>a single day, full day appointment</strong>: this will delete that day from the application.</p>
+		<p>You can delete <strong>a timed appointment on a single day</strong>: this will delete that day from the application.</p>
+		<p>You can delete <strong>a multi-day all day appointment</strong>: this will delete those days from the application.</p>
+		<p>You can delete <strong>a timed, part day appointment across more than one day</strong>: this will delete those days from the application.</p>
+		<p>You can delete <strong>a single appointment from a set of recurring appointments</strong>: this will delete that day from the application.</p>
 
-
-
+	</section>
+</div>
