--- a/app/views/calculator/_reverse_form.html.erb
+++ b/app/views/calculator/_reverse_form.html.erb
@@ -18,4 +18,4 @@
 	 
 		<button type="submit" class="btn btn-primary" id="calculate">Continue with this period and end date</button>
 	</form>
-</div>
+</section>
